chzange img 500px

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 
 <!DOCTYPE html>
-<html lang = "fr">
+<html lang = "en">
 <head>
 	<meta charset = <"UTF-8">
 	<Title>My First Page</title>
-</head>
+        <style>
+            img {
+                width: 500px;
+            }
+        </style>
+    </head>
+
 	<h1{color:blue;}
 <body>
 
 	<h1> Hi, I just created this little link to share with you.</h1>
 <p> Let me know what your thoughs are and if you wanted to go ahead and book</p>
-<img scr=desktop"Rob05226-Edit.jpg" alt="Sundays and Mondays"/>
+<img src="1.jpg" alt="Sundays and Mondays"/>
 <br>
 <br>
 <a href="https://www.timpephotos.com"> TimpePhotos Website </a>
